<resources>
    <string name="app_name">MyPokedex</string>
    <string name="fail">But, it failed!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pokedex">Pokedex</string>
    <string name="empty_text">No pokemons to show</string>
    <string name="pokemon_image">pokemon image</string>
    <string name="type">Type</string>
    <string name="electric">Electric</string>
    <string name="height">Height:</string>
    <string name="weight">Weight</string>
    <string name="nuke_database">Nuke database</string>
    <string name="search">search</string>
    <string name="nuke_entries">Nuke entries</string>
    <string name="confirmation">Confirmation</string>
    <string name="yes">YES</string>
    <string name="pokemon">Pokemon</string>
    <string name="entry">Entry</string>
    <string name="no">NO</string>
    <string name="loading">Loading…</string>
    <string name="weak_to">Weak to</string>
    <string name="strong_against">Strong against</string>
</resources>
