<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="pokemon" type="com.zaripov.mypokedex.model.Pokemon"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.fragment.PokeDetailsFragment">

        <ImageView
                android:id="@+id/pokemon_iv"
                android:layout_width="@dimen/pokemon_image_view_size"
                android:layout_height="@dimen/pokemon_image_view_size"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:background="@drawable/border"
                tools:srcCompat="@drawable/loading_animation"
                android:contentDescription="@string/pokemon_image"
                app:bind_detail_sprite="@{pokemon}"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"/>

        <TextView
                android:id="@+id/pokemon_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@+id/pokemon_iv"
                app:layout_constraintStart_toEndOf="@+id/pokemon_iv"
                app:layout_constraintBottom_toBottomOf="@+id/pokemon_iv"
                android:layout_marginStart="16dp"
                tools:text="Pikachu"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:bind_pokemon_name="@{pokemon}"/>

        <TextView
                android:id="@+id/pokemon_entry_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/pokemon_iv"
                app:layout_constraintEnd_toEndOf="@+id/pokemon_iv"
                app:layout_constraintTop_toBottomOf="@+id/pokemon_iv"
                android:layout_marginTop="8dp"
                tools:text="25"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:bind_pokemon_entry="@{pokemon}"
        />

        <TextView
                android:id="@+id/pokemon_type_label_tv"
                android:text="@string/type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/pokemon_entry_tv"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

        <TextView
                android:text="@string/height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pokemon_height_label_tv"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintTop_toBottomOf="@+id/cg_poke_type" android:layout_marginTop="32dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pokemon_height_tv" app:layout_constraintStart_toEndOf="@+id/pokemon_height_label_tv"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toTopOf="@+id/pokemon_height_label_tv"
                app:layout_constraintBottom_toBottomOf="@+id/pokemon_height_label_tv"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                tools:text="4"
                app:bind_pokemon_height="@{pokemon}"/>

        <TextView
                android:text="@string/weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pokemon_weight_label_tv"
                app:layout_constraintStart_toStartOf="@+id/pokemon_height_label_tv"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/pokemon_height_label_tv"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pokemon_weight_tv"
                app:layout_constraintStart_toStartOf="@+id/pokemon_height_tv"
                app:layout_constraintTop_toTopOf="@+id/pokemon_weight_label_tv"
                app:layout_constraintBottom_toBottomOf="@+id/pokemon_weight_label_tv"
                tools:text="60"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:bind_pokemon_weight="@{pokemon}"/>

        <com.google.android.material.chip.ChipGroup
                android:id="@+id/cg_poke_type"
                app:chipSpacingHorizontal="0dp"
                app:chipSpacingVertical="8dp"
                app:singleLine="false"
                android:layout_width="@dimen/poke_type_chip_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/pokemon_type_label_tv"
                app:layout_constraintStart_toStartOf="@+id/pokemon_type_label_tv"
                app:bind_pokemon_type_chips="@{pokemon}"/>

        <com.google.android.material.chip.ChipGroup
                android:id="@+id/weaknesses_chips"
                android:layout_width="169dp"
                app:chipSpacing="8dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/weaknesses_label"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@+id/weaknesses_label"
                app:bind_pokemon_weaknesses_chips="@{pokemon}"/>
        <TextView
                android:text="@string/weak_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/weaknesses_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintTop_toTopOf="@+id/pokemon_type_label_tv"
                app:layout_constraintStart_toEndOf="@+id/cg_poke_type" android:layout_marginStart="64dp"/>
        <TextView
                android:text="@string/strong_against"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/resistances_label" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/weaknesses_chips"
                app:layout_constraintStart_toStartOf="@+id/weaknesses_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
        <com.google.android.material.chip.ChipGroup
                android:layout_width="169dp"
                android:layout_height="wrap_content"
                app:chipSpacing="8dp"
                app:layout_constraintTop_toBottomOf="@+id/resistances_label"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@+id/resistances_label"
                app:bind_pokemon_resistances_chips="@{pokemon}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>